@@ -120,15 +120,15 @@ final class DataSerializableSerializer implements StreamSerializer<DataSerializa
         return readInternal(in, aClass);
     }
 
-    private DataSerializable readInternal(ObjectDataInput in, Class aClass)
+    private DataSerializable readInternal(ObjectDataInput in, Class<?> aClass)
             throws IOException {
         setInputVersion(in, version);
         DataSerializable ds = null;
         if (null != aClass) {
             try {
-                ds = (DataSerializable) aClass.newInstance();
+                ds = (DataSerializable) aClass.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
-                e = tryClarifyInstantiationException(aClass, e);
+                e = tryClarifyReflectiveOperationException(aClass, e);
                 throw new HazelcastSerializationException("Requested class " + aClass + " could not be instantiated.", e);
             }
         }
@@ -191,19 +191,27 @@ final class DataSerializableSerializer implements StreamSerializer<DataSerializa
                 + ", exception: " + e.getMessage(), e);
     }
 
-    private Exception tryClarifyInstantiationException(Class aClass, Exception exception) {
-        if (!(exception instanceof InstantiationException)) {
+    /**
+     * @return
+     *         <ul>
+     *         <li>If {@code exception} is an {@link NoSuchMethodError} and matches criteria of
+     *         {@link #tryGenerateClarifiedExceptionMessage(Class)}, a new {@link ReflectiveOperationException} with the new
+     *         message
+     *         <li>Otherwise, {code exception}
+     *         </ul>
+     */
+    private Exception tryClarifyReflectiveOperationException(Class<?> aClass, Exception exception) {
+        if (!(exception instanceof ReflectiveOperationException)) {
             return exception;
         }
-        InstantiationException instantiationException = (InstantiationException) exception;
 
         String message = tryGenerateClarifiedExceptionMessage(aClass);
         if (message == null) {
-            return instantiationException;
+            return exception;
         }
 
-        InstantiationException clarifiedException = new InstantiationException(message);
-        clarifiedException.initCause(instantiationException);
+        Exception clarifiedException = new ReflectiveOperationException(message);
+        clarifiedException.initCause(exception);
         return clarifiedException;
     }
 
@@ -213,7 +221,7 @@ final class DataSerializableSerializer implements StreamSerializer<DataSerializa
         }
         NoSuchMethodException noSuchMethodException = (NoSuchMethodException) exception;
 
-        Class aClass;
+        Class<?> aClass;
         try {
             ClassLoader effectiveClassLoader = classLoader == null ? ClassLoaderUtil.class.getClassLoader() : classLoader;
             aClass = ClassLoaderUtil.loadClass(effectiveClassLoader, className);
@@ -265,8 +273,16 @@ final class DataSerializableSerializer implements StreamSerializer<DataSerializa
         ((VersionedObjectDataInput) in).setVersion(version);
     }
 
-    private static String tryGenerateClarifiedExceptionMessage(Class aClass) {
-        String classType;
+    /**
+     * @return an error message if {@code aClass} is:
+     *         <ul>
+     *         <li>{@link Class#isAnonymousClass()}
+     *         <li>{@link Class#isLocalClass()}
+     *         <li>non-{@code static} {@link Class#isMemberClass()}
+     *         </ul>
+     */
+    private static String tryGenerateClarifiedExceptionMessage(Class<?> aClass) {
+        final String classType;
         if (aClass.isAnonymousClass()) {
             classType = "Anonymous";
         } else if (aClass.isLocalClass()) {
@@ -280,5 +296,4 @@ final class DataSerializableSerializer implements StreamSerializer<DataSerializa
         return String.format("%s classes can't conform to DataSerializable since they can't "
                 + "provide an explicit no-arguments constructor.", classType);
     }
-
 }
