@@ -30,7 +30,7 @@ import com.hazelcast.nio.ObjectDataOutput;
 import com.hazelcast.nio.serialization.IdentifiedDataSerializable;
 import com.hazelcast.query.Predicate;
 import com.hazelcast.query.Predicates;
-import com.hazelcast.query.impl.Indexes;
+import com.hazelcast.query.impl.IndexRegistry;
 import com.hazelcast.query.impl.QueryContext;
 import com.hazelcast.query.impl.QueryableEntry;
 
@@ -164,7 +164,7 @@ public class SqlPredicate
         SqlParser parser = new SqlParser();
         List<String> sqlTokens = parser.toPrefix(paramSql);
         List<Object> tokens = new ArrayList<>(sqlTokens);
-        if (tokens.size() == 0) {
+        if (tokens.isEmpty()) {
             throw new IllegalArgumentException("Invalid SQL: [" + paramSql + "]");
         }
         if (tokens.size() == 1) {
@@ -305,7 +305,7 @@ public class SqlPredicate
     }
 
     private void setOrAdd(List tokens, int position, Predicate predicate) {
-        if (tokens.size() == 0) {
+        if (tokens.isEmpty()) {
             tokens.add(predicate);
         } else {
             tokens.set(position, predicate);
@@ -344,10 +344,10 @@ public class SqlPredicate
             predicates = new Predicate[]{predicateLeft, predicateRight};
         }
         try {
-            T compoundPredicate = klass.newInstance();
+            T compoundPredicate = klass.getDeclaredConstructor().newInstance();
             compoundPredicate.setPredicates(predicates);
             return compoundPredicate;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (ReflectiveOperationException e) {
             throw new IllegalArgumentException(String.format("%s must have a public default constructor", klass.getName()));
         }
     }
@@ -385,7 +385,7 @@ public class SqlPredicate
     }
 
     @Override
-    public Predicate accept(Visitor visitor, Indexes indexes) {
+    public Predicate accept(Visitor visitor, IndexRegistry indexes) {
         Predicate target = predicate;
         if (predicate instanceof VisitablePredicate) {
             target = ((VisitablePredicate) predicate).accept(visitor, indexes);
